--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IChat - Realtime Chatting App</title>
     <link rel="stylesheet" href="style.css">
-    <script defer src="http://localhost:8000/socket.io/socket.io.js"></script>
+    <script defer src="https://chat-app-ihi9.onrender.com/socket.io/socket.io.js"></script>
     <script defer type="module" src="client.js"></script>
 </head>
 <body>
